hopefully working fix without overflow-x:hidden;

--- a/source/_patterns/10-components/ticker/ticker.scss
+++ b/source/_patterns/10-components/ticker/ticker.scss
@@ -97,6 +97,7 @@
 
     @include smartphone {
       @include fullwidth-element();
+      width: calc(100vw - 1px); // the 1px line on the ticker element *really* messes stuff up...
 
       margin-top: 10px;
       margin-bottom: 12px;
