--- a/source/_patterns/_globals.scss
+++ b/source/_patterns/_globals.scss
@@ -12,7 +12,6 @@ body {
   margin: 0;
   font-family: $font-light;
   background-color: #fefefd;
-  overflow-x: hidden;
 }
 
 ul {
